log
Thu 14 Sep 2023 05:16:17 PM UTC: 
 tests:  1|8
total_score: 0/70
c0419ea
Thu 14 Sep 2023 05:26:48 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:73:3: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
   73 |   Tree_Node* aux = tree->root;
      |   ^~~~~~~~~
      |   TreeNode
treemap.c:73:20: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   73 |   Tree_Node* aux = tree->root;
      |                    ^~~~
treemap.c:76:18: error: request for member ‘key’ in something not a structure or union
   76 |     if(key == aux->key) return aux->dat;
      |                  ^~
treemap.c:76:35: error: request for member ‘dat’ in something not a structure or union
   76 |     if(key == aux->key) return aux->dat;
      |                                   ^~
treemap.c:78:22: error: request for member ‘key’ in something not a structure or union
   78 |     else if(key < aux->key) aux = aux->left;
      |                      ^~
treemap.c:78:38: error: request for member ‘left’ in something not a structure or union
   78 |     else if(key < aux->key) aux = aux->left;
      |                                      ^~
treemap.c:80:20: error: request for member ‘right’ in something not a structure or union
   80 |     else  aux = aux->right;
      |                    ^~
cc1: all warnings being treated as errors
Compilation failed
9689ca7
Thu 14 Sep 2023 05:27:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:18: error: ‘TreeNode’ has no member named ‘key’
   76 |     if(key == aux->key) return aux->dat;
      |                  ^~
treemap.c:76:35: error: ‘TreeNode’ has no member named ‘dat’
   76 |     if(key == aux->key) return aux->dat;
      |                                   ^~
treemap.c:78:22: error: ‘TreeNode’ has no member named ‘key’
   78 |     else if(key < aux->key) aux = aux->left;
      |                      ^~
Compilation failed
10b1247
Thu 14 Sep 2023 05:35:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:18: error: ‘TreeNode’ has no member named ‘key’
   76 |     if(key == aux->key) return aux->data;
      |                  ^~
treemap.c:76:35: error: ‘TreeNode’ has no member named ‘data’
   76 |     if(key == aux->key) return aux->data;
      |                                   ^~
treemap.c:78:22: error: ‘TreeNode’ has no member named ‘key’
   78 |     else if(key < aux->key) aux = aux->left;
      |                      ^~
Compilation failed
feefd57
Thu 14 Sep 2023 05:40:56 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:108: error: ‘TreeNode’ has no member named ‘data’
   76 |     if(tree->lower_than(key, aux->pair->key) == 0 && tree->lower_than(aux->pair->key, key) == 0) return aux->data;
      |                                                                                                            ^~
Compilation failed
714e8fa
Thu 14 Sep 2023 05:42:01 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:18: error: ‘TreeNode’ has no member named ‘key’
   76 |     if(key == aux->key) return aux->pair;
      |                  ^~
treemap.c:78:22: error: ‘TreeNode’ has no member named ‘key’
   78 |     else if(key < aux->key) aux = aux->left;
      |                      ^~
Compilation failed
2e31a34
Thu 14 Sep 2023 05:42:52 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|8
total_score: 0/70
57590ee
Thu 14 Sep 2023 05:47:14 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:26: error: ‘temp’ undeclared (first use in this function)
   76 |     if(is_equal(tree,key,temp->pair->key)){
      |                          ^~~~
treemap.c:76:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
127f4f7
Thu 14 Sep 2023 05:47:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 10/70
86278bc
Thu 14 Sep 2023 05:57:08 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
e9f856b
Thu 14 Sep 2023 05:57:55 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 10/70
15edba0
Thu 14 Sep 2023 06:24:50 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   54 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8f652c6
Thu 14 Sep 2023 06:25:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7b7fbb2
Thu 14 Sep 2023 07:02:54 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
509e34b
